更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -26,7 +26,7 @@ CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
 
 # ======================
-# x86架构核心优化（修复重复）
+# x86架构核心优化
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -34,7 +34,6 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-# 修复：统一使用Intel P-State并启用HWP
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=n
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
@@ -42,7 +41,7 @@ CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=n
 
 # ======================
-# Intel硬件深度优化（降低开销）
+# Intel硬件深度优化
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y                      
@@ -76,7 +75,7 @@ CONFIG_SLUB_DEBUG=n
 CONFIG_ZSMALLOC=n
 
 # ======================
-# 网络协议栈高性能配置（移除重复）
+# 网络协议栈高性能配置
 # ======================
 CONFIG_TCP_CONG_BBR3=y    
 CONFIG_NET_SCH_DEFAULT=y
@@ -97,7 +96,7 @@ CONFIG_INET_TCP_DIAG=n
 CONFIG_INET_UDP_DIAG=n
 
 # ======================
-# Netfilter/NAT优化（保持不变）
+# Netfilter/NAT优化
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
@@ -117,16 +116,20 @@ CONFIG_NF_CONNTRACK_PROCFS=n
 CONFIG_NF_CONNTRACK_SECMARK=n
 
 # ======================
-# 精简内核模块配置（移除重复模块）
+# 精简内核模块配置
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y     
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y          
 CONFIG_PACKAGE_kmod-nf-flow-table=y
+CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
 CONFIG_PACKAGE_kmod-sched-fq_codel=y
@@ -134,7 +137,7 @@ CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
 
 # ======================
-# 用户态工具（性能监控/调优）
+# 用户态工具
 # ======================
 CONFIG_PACKAGE_ethtool=y          
 CONFIG_PACKAGE_irqbalance=y       
@@ -143,7 +146,7 @@ CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
 
 # ======================
-# LuCI应用配置 (精简实用)
+# LuCI应用配置
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
