更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -38,7 +38,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=n
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
-CONFIG_SCHED_SMT=n
+CONFIG_SCHED_SMT=y
 
 # ======================
 # Intel硬件深度优化
@@ -50,7 +50,7 @@ CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=n
+CONFIG_IGC_DIM=y
 CONFIG_IRQ_AFFINITY_HINT=y       
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=n
@@ -59,9 +59,10 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_XPS=y
 CONFIG_RPS=y                    
-CONFIG_RFS=n
-CONFIG_RFS_ACCEL=n             
-CONFIG_NET_RX_BUSY_POLL=n
+CONFIG_RFS=y
+CONFIG_IGC_RSS=y 
+CONFIG_RFS_ACCEL=y            
+CONFIG_NET_RX_BUSY_POLL=y
 
 # ======================
 # 内存管理优化（保持一致）
@@ -69,7 +70,7 @@ CONFIG_NET_RX_BUSY_POLL=n
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y 
-CONFIG_SLUB_CPU_PARTIAL_DEFAULT=16
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=32
 CONFIG_TRANSPARENT_HUGEPAGE=n
 CONFIG_SLUB_DEBUG=n
 CONFIG_ZSMALLOC=n
@@ -81,13 +82,13 @@ CONFIG_TCP_CONG_BBR3=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
-CONFIG_PACKET=y                
+CONFIG_PACKET=n               
 CONFIG_SYN_COOKIES=y              
 CONFIG_UDP_GRO=y                  
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=n
 CONFIG_NET_SCH_FQ=y
-CONFIG_TCP_NOTSENT_LOWAT=16384
+CONFIG_TCP_NOTSENT_LOWAT=32768
 CONFIG_NET_SCH_MQPRIO=n
 CONFIG_IP_ADVANCED_ROUTER=y  
 CONFIG_IP_MULTIPLE_TABLES=y  
@@ -134,7 +135,6 @@ CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
 CONFIG_PACKAGE_kmod-sched-fq_codel=y
 CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-ipt-offload=y
 
 # ======================
 # 用户态工具
