--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -149,7 +149,7 @@ CONFIG_PACKAGE_ip-full=y
 # LuCI应用配置
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-oaf=y
+#CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
