--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -39,6 +39,7 @@ CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
+CONFIG_SCHED_BPF=y
 
 # ======================
 # Intel硬件深度优化
@@ -60,12 +61,38 @@ CONFIG_IRQ_DOMAIN=y
 CONFIG_XPS=y
 CONFIG_RPS=y                    
 CONFIG_RFS=y
-CONFIG_IGC_RSS=y 
+CONFIG_IGC_RSS=y 
 CONFIG_RFS_ACCEL=y            
 CONFIG_NET_RX_BUSY_POLL=y
 
 # ======================
-# 内存管理优化（保持一致）
+# BPF (Berkeley Packet Filter) 完整配置
+# ======================
+CONFIG_BPF=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_BPF_JIT_DEFAULT_ON=y
+CONFIG_HAVE_EBPF_JIT=y
+CONFIG_BPF_EVENTS=y
+CONFIG_BPF_STREAM_PARSER=y
+CONFIG_XDP_SOCKETS=y
+CONFIG_CGROUP_BPF=y
+CONFIG_BPF_LSM=y
+CONFIG_DEBUG_INFO_BTF=y
+CONFIG_BPF_LIRC_MODE2=n
+CONFIG_BPF_PRELOAD=n
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
+CONFIG_IPV6_SEG6_BPF=y
+CONFIG_NETFILTER_XT_MATCH_BPF=y
+CONFIG_NET_CLS_BPF=y
+CONFIG_NET_ACT_BPF=y
+CONFIG_BPFILTER=y
+CONFIG_BPFILTER_UMH=y
+CONFIG_TEST_BPF=y
+
+# ======================
+# 内存管理优化
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
@@ -135,6 +162,14 @@ CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
 CONFIG_PACKAGE_kmod-sched-fq_codel=y
 CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
+
+# ======================
+# BPF相关内核模块
+# ======================
+CONFIG_PACKAGE_kmod-bpf-test=y
+CONFIG_PACKAGE_kmod-xdp-tools=y
+CONFIG_PACKAGE_kmod-bpf-alternatives=y
 
 # ======================
 # 用户态工具
@@ -144,6 +179,9 @@ CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_bpftool=y
+CONFIG_PACKAGE_bpf-headers=y
+CONFIG_PACKAGE_libbpf=y
 
 # ======================
 # LuCI应用配置
