--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -89,7 +89,7 @@ CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
 CONFIG_BPFILTER=y
 CONFIG_BPFILTER_UMH=y
-CONFIG_TEST_BPF=y
+CONFIG_NETFILTER_BPF_LINK=y
 
 # ======================
 # 内存管理优化
@@ -175,6 +175,7 @@ CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_bpftool=y
 CONFIG_PACKAGE_bpf-headers=y
 CONFIG_PACKAGE_libbpf=y
+CONFIG_PACKAGE_ucode-mod-bpf=y
 
 # ======================
 # LuCI应用配置
