--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -163,6 +163,8 @@ CONFIG_PACKAGE_kmod-sched-fq=y
 CONFIG_PACKAGE_kmod-sched-fq_codel=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
+CONFIG_PACKAGE_kmod-nft-compat=y
+CONFIG_PACKAGE_kmod-nft-bridge=y
 
 # ======================
 # 用户态工具
