--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -107,15 +107,14 @@ CONFIG_ZSMALLOC=n
 # ======================
 CONFIG_TCP_CONG_BBR3=y    
 CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_PIE=y
-CONFIG_NET_SCH_FQ_PIE=y
+CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_PACKET=n               
 CONFIG_SYN_COOKIES=y              
 CONFIG_UDP_GRO=y                  
-CONFIG_NET_SCH_FQ_CODEL=n
+CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=n
-CONFIG_NET_SCH_FQ=n
+CONFIG_NET_SCH_FQ=y
 CONFIG_TCP_NOTSENT_LOWAT=32768
 CONFIG_NET_SCH_MQPRIO=n
 CONFIG_IP_ADVANCED_ROUTER=y  
@@ -160,13 +159,12 @@ CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nf-flow-table=y
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-fq=n
-CONFIG_PACKAGE_kmod-sched-fq_codel=n
+CONFIG_PACKAGE_kmod-sched-fq=y
+CONFIG_PACKAGE_kmod-sched-fq_codel=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-sched-pie=y
 
 # ======================
 # 用户态工具
