--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -16,7 +16,7 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_THIN=y 
+CONFIG_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_FOR_SIZE=n
@@ -42,7 +42,7 @@ CONFIG_SCHED_SMT=y
 CONFIG_SCHED_BPF=y
 
 # ======================
-# Intel硬件深度优化
+# Intel硬件深度优化（J4125+I226）
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y                      
@@ -66,33 +66,7 @@ CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
 
 # ======================
-# BPF (Berkeley Packet Filter) 完整配置
-# ======================
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_JIT_DEFAULT_ON=y
-CONFIG_HAVE_EBPF_JIT=y
-CONFIG_BPF_EVENTS=y
-CONFIG_BPF_STREAM_PARSER=y
-CONFIG_XDP_SOCKETS=y
-CONFIG_CGROUP_BPF=y
-CONFIG_BPF_LSM=y
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_BPF_LIRC_MODE2=n
-CONFIG_BPF_PRELOAD=n
-CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
-CONFIG_IPV6_SEG6_BPF=y
-CONFIG_NETFILTER_XT_MATCH_BPF=y
-CONFIG_NET_CLS_BPF=y
-CONFIG_NET_ACT_BPF=y
-CONFIG_BPFILTER=y
-CONFIG_BPFILTER_UMH=y
-CONFIG_NETFILTER_BPF_LINK=y
-
-# ======================
-# 内存管理优化
+# 内存管理优化（8GB低开销）
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
@@ -122,9 +96,14 @@ CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_INET_DIAG=n
 CONFIG_INET_TCP_DIAG=n
 CONFIG_INET_UDP_DIAG=n
+CONFIG_IPV6=y
+CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_IPV6_SUBTREES=y
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_IPV6_ROUTE_INFO=y
 
 # ======================
-# Netfilter/NAT优化
+# Netfilter/NAT硬件卸载
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
@@ -142,9 +121,65 @@ CONFIG_NF_CONNTRACK_EVENTS=n
 CONFIG_NF_CONNTRACK_TIMEOUT=y
 CONFIG_NF_CONNTRACK_PROCFS=n
 CONFIG_NF_CONNTRACK_SECMARK=n
+CONFIG_NF_FLOW_TABLE_INET=y
+CONFIG_NF_FLOW_TABLE_IPV4=y
+CONFIG_NF_FLOW_TABLE_IPV6=y
+CONFIG_NF_CT_NETLINK=y
 
 # ======================
-# 精简内核模块配置
+# BPF/eBPF完整配置
+# ======================
+CONFIG_BPF=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_BPF_JIT_DEFAULT_ON=y
+CONFIG_HAVE_EBPF_JIT=y
+CONFIG_BPF_EVENTS=y
+CONFIG_BPF_STREAM_PARSER=y
+CONFIG_BPF_LSM=y
+CONFIG_BPF_PRELOAD=y
+CONFIG_DEBUG_INFO_BTF=y
+CONFIG_DEBUG_INFO_BTF_MODULES=y
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
+CONFIG_CGROUP_BPF=y
+CONFIG_BPF_LIRC_MODE2=y
+CONFIG_NET_CLS_BPF=y
+CONFIG_NET_ACT_BPF=y
+CONFIG_BPFILTER=y
+CONFIG_BPFILTER_UMH=y
+CONFIG_LWTUNNEL_BPF=y
+CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_EGRESS=y
+CONFIG_NET_XGRESS=y
+CONFIG_BPF_KPROBE_OVERRIDE=y
+CONFIG_ARCH_WANT_DEFAULT_BPF_JIT=y
+CONFIG_BPF_PRELOAD_UMD=y
+
+# ======================
+# XDP完整配置
+# ======================
+CONFIG_XDP_SOCKETS=y
+CONFIG_XDP_SOCKETS_DIAG=y
+CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
+CONFIG_XDP_OFFLOAD=y
+CONFIG_XDP_TX=y
+CONFIG_XDP_REDIRECT=y
+CONFIG_XDP_FRAME=y
+CONFIG_XSK_BUFF_ALLOC=y
+CONFIG_XSK_BATCHED_DESC=y
+CONFIG_XSK_GEN_RX_SUPPORT=y
+CONFIG_XSK_GEN_TX_SUPPORT=y
+CONFIG_NET_XDP=y
+CONFIG_NET_XDP_GENERIC=y
+CONFIG_NET_XDP_SOCKETS=y
+CONFIG_NET_XDP_UMEM=y
+CONFIG_NET_XDP_UMEM_DMA=y
+CONFIG_NET_DEVLINK=y
+CONFIG_NET_XDP_UMEM_ALIGNMENT=8
+
+# ======================
+# 必要内核模块（完整版）
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y     
 CONFIG_PACKAGE_kmod-nft-core=y
@@ -157,30 +192,35 @@ CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y          
 CONFIG_PACKAGE_kmod-nf-flow-table=y
+CONFIG_PACKAGE_kmod-bpfilter=y
+CONFIG_PACKAGE_kmod-xdp-sockets=y
+CONFIG_PACKAGE_kmod-xdp-tools=y
+CONFIG_PACKAGE_kmod-xdp-umem=y
+CONFIG_PACKAGE_kmod-xdp-redirect=y
+CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-fq=y
-CONFIG_PACKAGE_kmod-sched-fq_codel=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
 
 # ======================
-# 用户态工具
+# 用户态工具（性能监控/调优）
 # ======================
 CONFIG_PACKAGE_ethtool=y          
 CONFIG_PACKAGE_irqbalance=y       
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_libbpf=y
+CONFIG_PACKAGE_libxdp=y
 CONFIG_PACKAGE_bpftool=y
 CONFIG_PACKAGE_bpf-headers=y
-CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_ucode-mod-bpf=y
 
 # ======================
-# LuCI应用配置
+# LuCI应用配置 (精简实用)
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 #CONFIG_PACKAGE_luci-app-oaf=y
@@ -190,7 +230,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-upnp=y
 
 # ======================
-# 生产环境优化配置
+# 生产环境调试精简
 # ======================
 CONFIG_DEBUG_INFO=n
 CONFIG_SLUB_DEBUG=n
@@ -213,3 +253,16 @@ CONFIG_WLAN_VENDOR_INTEL=n
 CONFIG_WLAN_VENDOR_ATH=n
 CONFIG_BT=n
 CONFIG_RFKILL=n
+
+# ======================
+# 安全与加固配置
+# ======================
+CONFIG_SECCOMP=y
+CONFIG_SECCOMP_FILTER=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
+CONFIG_CC_STACKPROTECTOR_REGULAR=y
+CONFIG_STRICT_DEVMEM=y
+CONFIG_IO_STRICT_DEVMEM=y
+CONFIG_REFCOUNT_FULL=y
+CONFIG_SLAB_FREELIST_RANDOM=y
+CONFIG_SLAB_FREELIST_HARDENED=y
