更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -54,7 +54,7 @@ CONFIG_IGC_TSO=y
 CONFIG_IGC_DIM=y
 CONFIG_IRQ_AFFINITY_HINT=y       
 CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_DOMAIN_HIERARCHY=n
+CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_IRQ_FORCED_THREADING=n
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
@@ -72,7 +72,8 @@ CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y 
 CONFIG_SLUB_CPU_PARTIAL_DEFAULT=32
-CONFIG_TRANSPARENT_HUGEPAGE=n
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 CONFIG_SLUB_DEBUG=n
 CONFIG_ZSMALLOC=n
 
@@ -232,8 +233,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 # ======================
 # 生产环境调试精简
 # ======================
-CONFIG_DEBUG_INFO=n
-CONFIG_SLUB_DEBUG=n
+CONFIG_DEBUG_INFO=y
 CONFIG_PROFILING=n
 CONFIG_NET_DROP_MONITOR=n
 CONFIG_FTRACE=n
