更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -45,7 +45,8 @@ CONFIG_SCHED_BPF=y
 # Intel硬件深度优化（J4125+I226）
 # ======================
 CONFIG_INTEL_IDLE=y
-CONFIG_IGC=y                      
+CONFIG_IGC=y
+CONFIG_IGC_XDP=y                      
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
