更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -179,6 +179,14 @@ CONFIG_NET_XDP_UMEM=y
 CONFIG_NET_XDP_UMEM_DMA=y
 CONFIG_NET_DEVLINK=y
 CONFIG_NET_XDP_UMEM_ALIGNMENT=8
+CONFIG_KERNEL_DEBUG_INFO=y
+CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
+CONFIG_KERNEL_DEBUG_INFO_BTF=y
+CONFIG_KERNEL_CGROUPS=y
+CONFIG_KERNEL_CGROUP_BPF=y
+CONFIG_KERNEL_BPF_EVENTS=y
+CONFIG_BPF_TOOLCHAIN_HOST=y
+CONFIG_KERNEL_XDP_SOCKETS=y
 
 # ======================
 # 必要内核模块（完整版）
