--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -92,7 +92,7 @@ CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=n
 CONFIG_NET_SCH_FQ=y
 CONFIG_TCP_NOTSENT_LOWAT=32768
-CONFIG_NET_SCH_MQPRIO=n
+CONFIG_NET_SCH_MQPRIO=y
 CONFIG_IP_ADVANCED_ROUTER=y  
 CONFIG_IP_MULTIPLE_TABLES=y  
 CONFIG_INET_DIAG=n
@@ -145,7 +145,6 @@ CONFIG_DEBUG_INFO_BTF=y
 CONFIG_DEBUG_INFO_BTF_MODULES=y
 CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 CONFIG_CGROUP_BPF=y
-CONFIG_BPF_LIRC_MODE2=y
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
 CONFIG_BPFILTER=y
