--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,17 +1,17 @@
 # ======================
-# 目标架构与固件基础配置
+# 目标架构与固件配置
 # ======================
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
-CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_GRUB_EFI_IMAGES=y
 
 # ======================
-# 工具链与编译优化（J4125专用）
+# 编译工具链与优化
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
@@ -19,14 +19,14 @@ CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_FULL=y
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
+CONFIG_CC_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
-CONFIG_CC_OPTIMIZE_O3=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
 
 # ======================
-# x86架构核心优化
+# x86架构核心配置
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -42,59 +42,68 @@ CONFIG_SCHED_SMT=y
 CONFIG_SCHED_BPF=y
 
 # ======================
-# Intel硬件深度优化（J4125+I226）
+# Intel硬件优化 (J4125+I226)
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y
-CONFIG_IGC_XDP=y                      
+CONFIG_IGC_XDP=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
 CONFIG_IGC_DIM=y
-CONFIG_IRQ_AFFINITY_HINT=y       
+CONFIG_IGC_RSS=y
+CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_IRQ_FORCED_THREADING=n
+CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_XPS=y
-CONFIG_RPS=y                    
+CONFIG_RPS=y
 CONFIG_RFS=y
-CONFIG_IGC_RSS=y 
-CONFIG_RFS_ACCEL=y            
+CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_DMA_CMA=y
+CONFIG_CMA_SIZE_MBYTE=64
+CONFIG_DMA_DIRECT_REMAP=y
+CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_GENERIC_IRQ_MIGRATION=y
+CONFIG_HOTPLUG_CPU=y
 
 # ======================
-# 内存管理优化（8GB低开销）
+# 内存管理优化
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_PAGE_POOL=y 
 CONFIG_SLUB_CPU_PARTIAL_DEFAULT=32
+CONFIG_SLUB_DEBUG=n
+CONFIG_PAGE_POOL=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-CONFIG_SLUB_DEBUG=n
 CONFIG_ZSMALLOC=n
+CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
+CONFIG_ARCH_HAS_PREFETCH=y
+CONFIG_ARCH_HAS_PREFETCHW=y
 
 # ======================
-# 网络协议栈高性能配置
+# 网络协议栈优化
 # ======================
-CONFIG_TCP_CONG_BBR3=y    
+CONFIG_TCP_CONG_BBR3=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
-CONFIG_PACKET=n               
-CONFIG_SYN_COOKIES=y              
-CONFIG_UDP_GRO=y                  
+CONFIG_SYN_COOKIES=y
+CONFIG_UDP_GRO=y
 CONFIG_NET_SCH_FQ_CODEL=y
-CONFIG_NET_SCH_CAKE=n
 CONFIG_NET_SCH_FQ=y
-CONFIG_TCP_NOTSENT_LOWAT=32768
+CONFIG_NET_SCH_CAKE=n
 CONFIG_NET_SCH_MQPRIO=y
-CONFIG_IP_ADVANCED_ROUTER=y  
-CONFIG_IP_MULTIPLE_TABLES=y  
+CONFIG_TCP_NOTSENT_LOWAT=32768
+CONFIG_PACKET=n
+CONFIG_IP_ADVANCED_ROUTER=y
+CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_INET_DIAG=n
 CONFIG_INET_TCP_DIAG=n
 CONFIG_INET_UDP_DIAG=n
@@ -105,31 +114,31 @@ CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 
 # ======================
-# Netfilter/NAT硬件卸载
+# Netfilter/NAT配置
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_NAT=y
-CONFIG_NF_NAT_MASQUERADE_IPV4=y
-CONFIG_NF_TABLES=y
-CONFIG_NF_TABLES_NETDEV=y        
-CONFIG_NFT_NAT=y
-CONFIG_NFT_MASQ=y
-CONFIG_NFT_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_FLOW_OFFLOAD=y  
-CONFIG_NF_FLOW_TABLE=y
 CONFIG_NF_CONNTRACK_EVENTS=n
 CONFIG_NF_CONNTRACK_TIMEOUT=y
 CONFIG_NF_CONNTRACK_PROCFS=n
 CONFIG_NF_CONNTRACK_SECMARK=n
+CONFIG_NF_CT_NETLINK=y
+CONFIG_NF_NAT=y
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NFT_NAT=y
+CONFIG_NFT_MASQ=y
+CONFIG_NFT_FLOW_OFFLOAD=y
+CONFIG_NETFILTER_FLOW_OFFLOAD=y
+CONFIG_NF_FLOW_TABLE=y
 CONFIG_NF_FLOW_TABLE_INET=y
 CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
-CONFIG_NF_CT_NETLINK=y
 
 # ======================
-# BPF/eBPF完整配置
+# BPF/eBPF系统配置
 # ======================
 CONFIG_BPF=y
 CONFIG_BPF_SYSCALL=y
@@ -141,9 +150,12 @@ CONFIG_BPF_EVENTS=y
 CONFIG_BPF_STREAM_PARSER=y
 CONFIG_BPF_LSM=y
 CONFIG_BPF_PRELOAD=y
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
+CONFIG_BPF_KPROBE_OVERRIDE=y
+CONFIG_ARCH_WANT_DEFAULT_BPF_JIT=y
+CONFIG_BPF_PRELOAD_UMD=y
 CONFIG_DEBUG_INFO_BTF=y
 CONFIG_DEBUG_INFO_BTF_MODULES=y
-CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
@@ -153,16 +165,12 @@ CONFIG_LWTUNNEL_BPF=y
 CONFIG_NET_SCH_INGRESS=y
 CONFIG_NET_EGRESS=y
 CONFIG_NET_XGRESS=y
-CONFIG_BPF_KPROBE_OVERRIDE=y
-CONFIG_ARCH_WANT_DEFAULT_BPF_JIT=y
-CONFIG_BPF_PRELOAD_UMD=y
 
 # ======================
-# XDP完整配置
+# XDP网络加速配置
 # ======================
 CONFIG_XDP_SOCKETS=y
 CONFIG_XDP_SOCKETS_DIAG=y
-CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
 CONFIG_XDP_OFFLOAD=y
 CONFIG_XDP_TX=y
 CONFIG_XDP_REDIRECT=y
@@ -171,26 +179,20 @@ CONFIG_XSK_BUFF_ALLOC=y
 CONFIG_XSK_BATCHED_DESC=y
 CONFIG_XSK_GEN_RX_SUPPORT=y
 CONFIG_XSK_GEN_TX_SUPPORT=y
+CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
 CONFIG_NET_XDP=y
 CONFIG_NET_XDP_GENERIC=y
 CONFIG_NET_XDP_SOCKETS=y
 CONFIG_NET_XDP_UMEM=y
 CONFIG_NET_XDP_UMEM_DMA=y
-CONFIG_NET_DEVLINK=y
 CONFIG_NET_XDP_UMEM_ALIGNMENT=8
-CONFIG_KERNEL_DEBUG_INFO=y
-CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
-CONFIG_KERNEL_DEBUG_INFO_BTF=y
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_CGROUP_BPF=y
-CONFIG_KERNEL_BPF_EVENTS=y
-CONFIG_BPF_TOOLCHAIN_HOST=y
+CONFIG_NET_DEVLINK=y
 CONFIG_KERNEL_XDP_SOCKETS=y
 
 # ======================
-# 必要内核模块（完整版）
+# 内核模块配置
 # ======================
-CONFIG_PACKAGE_kmod-tcp-bbr=y     
+CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
@@ -199,7 +201,7 @@ CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
-CONFIG_PACKAGE_kmod-nf-nat6=y          
+CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nf-flow-table=y
 CONFIG_PACKAGE_kmod-bpfilter=y
 CONFIG_PACKAGE_kmod-xdp-sockets=y
@@ -215,44 +217,50 @@ CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
 
 # ======================
-# 用户态工具（性能监控/调优）
+# 用户态工具包
 # ======================
-CONFIG_PACKAGE_ethtool=y          
-CONFIG_PACKAGE_irqbalance=y       
+CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libxdp=y
-CONFIG_PACKAGE_bpftool=y
 CONFIG_PACKAGE_bpf-headers=y
 CONFIG_PACKAGE_ucode-mod-bpf=y
 
 # ======================
-# LuCI应用配置 (精简实用)
+# LuCI应用模块
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
-#CONFIG_PACKAGE_luci-app-oaf=y
+# CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-upnp=y
 
 # ======================
-# 生产环境调试精简
+# 内核调试与诊断
 # ======================
 CONFIG_DEBUG_INFO=y
-CONFIG_PROFILING=n
-CONFIG_NET_DROP_MONITOR=n
-CONFIG_FTRACE=n
-CONFIG_KPROBES=n
+CONFIG_KERNEL_DEBUG_INFO=y
+CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
+CONFIG_KERNEL_DEBUG_INFO_BTF=y
 CONFIG_DEBUG_KERNEL=n
+CONFIG_DEBUG_FS=n
 CONFIG_DEBUG_MISC=n
 CONFIG_DEBUG_LIST=n
-CONFIG_GDB_SCRIPTS=n
-CONFIG_DEBUG_FS=n
 CONFIG_STACKTRACE=n
 CONFIG_KALLSYMS=n
+CONFIG_GDB_SCRIPTS=n
+CONFIG_PROFILING=n
+CONFIG_FTRACE=n
+CONFIG_KPROBES=n
+CONFIG_NET_DROP_MONITOR=n
+
+# ======================
+# 硬件驱动精简
+# ======================
 CONFIG_SOUND=n
 CONFIG_HID=n
 CONFIG_NVMEM=n
@@ -263,7 +271,7 @@ CONFIG_BT=n
 CONFIG_RFKILL=n
 
 # ======================
-# 安全与加固配置
+# 系统安全加固
 # ======================
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
@@ -274,3 +282,11 @@ CONFIG_IO_STRICT_DEVMEM=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
+
+# ======================
+# 内核子系统配置
+# ======================
+CONFIG_KERNEL_CGROUPS=y
+CONFIG_KERNEL_CGROUP_BPF=y
+CONFIG_KERNEL_BPF_EVENTS=y
+CONFIG_BPF_TOOLCHAIN_HOST=y
