--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -67,6 +67,7 @@ CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_DMA_CMA=y
+CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTE=256
 CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
