--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -100,10 +100,10 @@ CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_FQ=y
-CONFIG_NET_SCH_CAKE=n
+CONFIG_NET_SCH_CAKE=y
 CONFIG_NET_SCH_MQPRIO=y
 CONFIG_TCP_NOTSENT_LOWAT=32768
-CONFIG_PACKET=n
+CONFIG_PACKET=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_INET_DIAG=n
@@ -217,6 +217,9 @@ CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
+CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-ipt-raw=y
+CONFIG_PACKAGE_kmod-ipt-offload=y
 
 # ======================
 # 用户态工具包
