--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -92,7 +92,8 @@ CONFIG_ARCH_HAS_PREFETCHW=y
 # ======================
 # 网络协议栈优化
 # ======================
-CONFIG_TCP_CONG_BBR2=y
+CONFIG_KERNEL_TCP_CONG_BBR2=y
+CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
