更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -39,14 +39,12 @@ CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
-CONFIG_SCHED_BPF=y
 
 # ======================
 # Intel硬件优化 (J4125+I226)
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y
-CONFIG_IGC_XDP=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
@@ -141,58 +139,6 @@ CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
 
 # ======================
-# BPF/eBPF系统配置
-# ======================
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_JIT_DEFAULT_ON=y
-CONFIG_HAVE_EBPF_JIT=y
-CONFIG_BPF_EVENTS=y
-CONFIG_BPF_STREAM_PARSER=y
-CONFIG_BPF_LSM=y
-CONFIG_BPF_PRELOAD=y
-CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
-CONFIG_BPF_KPROBE_OVERRIDE=y
-CONFIG_ARCH_WANT_DEFAULT_BPF_JIT=y
-CONFIG_BPF_PRELOAD_UMD=y
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_INFO_BTF_MODULES=y
-CONFIG_CGROUP_BPF=y
-CONFIG_NET_CLS_BPF=y
-CONFIG_NET_ACT_BPF=y
-CONFIG_BPFILTER=y
-CONFIG_BPFILTER_UMH=y
-CONFIG_LWTUNNEL_BPF=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_EGRESS=y
-CONFIG_NET_XGRESS=y
-
-# ======================
-# XDP网络加速配置
-# ======================
-CONFIG_XDP_SOCKETS=y
-CONFIG_XDP_SOCKETS_DIAG=y
-CONFIG_XDP_OFFLOAD=y
-CONFIG_XDP_TX=y
-CONFIG_XDP_REDIRECT=y
-CONFIG_XDP_FRAME=y
-CONFIG_XSK_BUFF_ALLOC=y
-CONFIG_XSK_BATCHED_DESC=y
-CONFIG_XSK_GEN_RX_SUPPORT=y
-CONFIG_XSK_GEN_TX_SUPPORT=y
-CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
-CONFIG_NET_XDP=y
-CONFIG_NET_XDP_GENERIC=y
-CONFIG_NET_XDP_SOCKETS=y
-CONFIG_NET_XDP_UMEM=y
-CONFIG_NET_XDP_UMEM_DMA=y
-CONFIG_NET_XDP_UMEM_ALIGNMENT=8
-CONFIG_NET_DEVLINK=y
-CONFIG_KERNEL_XDP_SOCKETS=y
-
-# ======================
 # 内核模块配置
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y
@@ -206,11 +152,9 @@ CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nf-flow-table=y
-CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-sched-cake=y
@@ -225,10 +169,6 @@ CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libxdp=y
-CONFIG_PACKAGE_bpf-headers=y
-CONFIG_PACKAGE_ucode-mod-bpf=y
 
 # ======================
 # LuCI应用模块
@@ -243,10 +183,10 @@ CONFIG_PACKAGE_luci-app-upnp=y
 # ======================
 # 内核调试与诊断
 # ======================
-CONFIG_DEBUG_INFO=y
-CONFIG_KERNEL_DEBUG_INFO=y
+CONFIG_DEBUG_INFO=n
+CONFIG_KERNEL_DEBUG_INFO=n
 CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
-CONFIG_KERNEL_DEBUG_INFO_BTF=y
+CONFIG_KERNEL_DEBUG_INFO_BTF=n
 CONFIG_DEBUG_KERNEL=n
 CONFIG_DEBUG_FS=n
 CONFIG_DEBUG_MISC=n
@@ -283,11 +223,3 @@ CONFIG_IO_STRICT_DEVMEM=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
-
-# ======================
-# 内核子系统配置
-# ======================
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_CGROUP_BPF=y
-CONFIG_KERNEL_BPF_EVENTS=y
-CONFIG_BPF_TOOLCHAIN_HOST=y
