更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -71,6 +71,22 @@ CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_IRQ_TIME_ACCOUNTING=n
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
+CONFIG_CRYPTO_AES=y
+CONFIG_CRYPTO_AES_X86_64=y
+CONFIG_CRYPTO_AES_NI_INTEL=y
+CONFIG_CRYPTO_AES_586=y
+CONFIG_CRYPTO_CBC=y
+CONFIG_CRYPTO_ECB=y
+CONFIG_CRYPTO_XTS=y
+CONFIG_CRYPTO_CTR=y
+CONFIG_CRYPTO_GCM=y
+CONFIG_CRYPTO_CCM=y
+CONFIG_LIBCRYPTO_AESNI=y
+CONFIG_OPENSSL_ENGINE=y
+CONFIG_OPENSSL_WITH_ASM=y
+CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM=y
+CONFIG_CRYPTO_GLUE_HELPER_X86=y
+CONFIG_CRYPTO_SIMD=y
 
 # ======================
 # 内存管理优化
@@ -91,7 +107,6 @@ CONFIG_ARCH_HAS_PREFETCHW=y
 # 网络协议栈优化
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR2=y
-CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
@@ -160,6 +175,7 @@ CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-ipt-raw=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_PACKAGE_kmod-crypto-aesni-intel=y
 
 # ======================
 # 用户态工具包
