--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -20,7 +20,6 @@ CONFIG_LTO_CLANG_FULL=y
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
 CONFIG_CC_OPTIMIZE_O3=y
-CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
@@ -34,7 +33,6 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=n
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
@@ -68,7 +66,6 @@ CONFIG_DMA_CMA=y
 CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTE=256
 CONFIG_DMA_DIRECT_REMAP=y
-CONFIG_IRQ_TIME_ACCOUNTING=n
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
 
@@ -78,11 +75,9 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SLUB_CPU_PARTIAL_DEFAULT=32
-CONFIG_SLUB_DEBUG=n
 CONFIG_PAGE_POOL=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-CONFIG_ZSMALLOC=n
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
 CONFIG_ARCH_HAS_PREFETCH=y
 CONFIG_ARCH_HAS_PREFETCHW=y
@@ -104,9 +99,6 @@ CONFIG_TCP_NOTSENT_LOWAT=32768
 CONFIG_PACKET=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
-CONFIG_INET_DIAG=n
-CONFIG_INET_TCP_DIAG=n
-CONFIG_INET_UDP_DIAG=n
 CONFIG_IPV6=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
@@ -119,10 +111,7 @@ CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_EVENTS=n
 CONFIG_NF_CONNTRACK_TIMEOUT=y
-CONFIG_NF_CONNTRACK_PROCFS=n
-CONFIG_NF_CONNTRACK_SECMARK=n
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
@@ -173,42 +162,11 @@ CONFIG_PACKAGE_ip-full=y
 # LuCI应用模块
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-oaf=y
+# CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-upnp=y
-
-# ======================
-# 内核调试与诊断
-# ======================
-CONFIG_DEBUG_INFO=n
-CONFIG_KERNEL_DEBUG_INFO=n
-CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
-CONFIG_KERNEL_DEBUG_INFO_BTF=n
-CONFIG_DEBUG_KERNEL=n
-CONFIG_DEBUG_FS=n
-CONFIG_DEBUG_MISC=n
-CONFIG_DEBUG_LIST=n
-CONFIG_STACKTRACE=n
-CONFIG_KALLSYMS=n
-CONFIG_GDB_SCRIPTS=n
-CONFIG_PROFILING=n
-CONFIG_FTRACE=n
-CONFIG_KPROBES=n
-CONFIG_NET_DROP_MONITOR=n
-
-# ======================
-# 硬件驱动精简
-# ======================
-CONFIG_SOUND=n
-CONFIG_HID=n
-CONFIG_NVMEM=n
-CONFIG_REGMAP_SPI=n
-CONFIG_WLAN_VENDOR_INTEL=n
-CONFIG_WLAN_VENDOR_ATH=n
-CONFIG_BT=n
-CONFIG_RFKILL=n
 
 # ======================
 # 系统安全加固
