--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -62,12 +62,18 @@ CONFIG_RPS=y
 CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_TX_BUSY_POLL=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTE=256
 CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
+CONFIG_NET_SOCK_MSG=y
+CONFIG_NET_DEVLINK=y
+CONFIG_GRO=y
+CONFIG_GSO=y
+CONFIG_NET_HW_FLOW_OFFLOAD=y
 
 # ======================
 # 内存管理优化
