更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -39,6 +39,18 @@ CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
 
 # ======================
+# Intel J4125特定优化
+# ======================
+CONFIG_MTRR=y
+CONFIG_X86_PAT=y
+CONFIG_ACPI_CPPC_CPUFREQ=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_X86_INTEL_LPSS=y
+CONFIG_X86_MSR=y
+
+# ======================
 # Intel硬件优化 (J4125+I226)
 # ======================
 CONFIG_INTEL_IDLE=y
@@ -71,8 +83,6 @@ CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_NET_SOCK_MSG=y
 CONFIG_NET_DEVLINK=y
-CONFIG_GRO=y
-CONFIG_GSO=y
 CONFIG_NET_HW_FLOW_OFFLOAD=y
 
 # ======================
@@ -89,9 +99,26 @@ CONFIG_ARCH_HAS_PREFETCH=y
 CONFIG_ARCH_HAS_PREFETCHW=y
 
 # ======================
+# 存储与IO优化
+# ======================
+CONFIG_BLK_DEV_IO_TRACE=y
+CONFIG_BLK_WBT=y
+CONFIG_BLK_WBT_MQ=y
+CONFIG_MQ_IOSCHED_DEADLINE=y
+CONFIG_MQ_IOSCHED_KYBER=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_BFQ_GROUP_IOSCHED=y
+CONFIG_ZSWAP=y
+CONFIG_ZSWAP_COMPRESSOR_DEFAULT_LZ4=y
+CONFIG_ZSWAP_ZPOOL_DEFAULT_ZBUD=y
+CONFIG_ZBUD=y
+
+# ======================
 # 网络协议栈优化
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR2=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
@@ -110,6 +137,10 @@ CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
+CONFIG_IPV6_OPTIMISTIC_DAD=y
+CONFIG_IPV6_PRIVACY=y
+CONFIG_GRO=y
+CONFIG_GSO=y
 
 # ======================
 # Netfilter/NAT配置
@@ -183,6 +214,11 @@ CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_STRICT_DEVMEM=y
 CONFIG_IO_STRICT_DEVMEM=y
-CONFIG_REFCOUNT_FULL=y
+CONFIG_REFCOUNT_SPINLOCK=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_STATIC_USERMODEHELPER=y
+CONFIG_STATIC_USERMODEHELPER_PATH=""
+CONFIG_SLAB_MERGE_DEFAULT=y
+CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+CONFIG_INIT_ON_FREE_DEFAULT_ON=y
