--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -86,6 +86,16 @@ CONFIG_NET_DEVLINK=y
 CONFIG_NET_HW_FLOW_OFFLOAD=y
 
 # ======================
+# 内核模块加载配置 (修复xtables-addons问题)
+# ======================
+CONFIG_MODULES=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_MODULE_SIG=n
+CONFIG_MODULE_SIG_FORCE=n
+CONFIG_MODULE_SIG_ALL=n
+
+# ======================
 # 内存管理优化
 # ======================
 CONFIG_SLUB=y
@@ -101,7 +111,7 @@ CONFIG_ARCH_HAS_PREFETCHW=y
 # ======================
 # 网络协议栈优化
 # ======================
-CONFIG_KERNEL_TCP_CONG_BBR3=y
+CONFIG_KERNEL_TCP_CONG_BBR2=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_NET_SCH_DEFAULT=y
@@ -321,6 +331,12 @@ CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
 
 # ======================
+# 禁用有问题的包 (修复编译错误)
+# ======================
+CONFIG_PACKAGE_xtables-addons=n
+CONFIG_PACKAGE_kmod-xtables-addons=n
+
+# ======================
 # 用户态工具包
 # ======================
 CONFIG_PACKAGE_ethtool=y
@@ -338,3 +354,18 @@ CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-upnp=y
+
+# ======================
+# 基础系统组件
+# ======================
+CONFIG_PACKAGE_base-files=y
+CONFIG_PACKAGE_busybox=y
+CONFIG_PACKAGE_dnsmasq=y
+CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_firewall=y
+CONFIG_PACKAGE_fstools=y
+CONFIG_PACKAGE_libc=y
+CONFIG_PACKAGE_libgcc=y
+CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_uci=y
+CONFIG_PACKAGE_urandom-seed=y
