更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -101,7 +101,7 @@ CONFIG_ARCH_HAS_PREFETCHW=y
 # ======================
 # 网络协议栈优化
 # ======================
-CONFIG_KERNEL_TCP_CONG_BBR2=y
+CONFIG_KERNEL_TCP_CONG_BBR3=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_NET_SCH_DEFAULT=y
@@ -126,6 +126,15 @@ CONFIG_IPV6_OPTIMISTIC_DAD=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_GRO=y
 CONFIG_GSO=y
+CONFIG_PACKAGE_nat6=y
+CONFIG_PACKAGE_ip6tables-nft=y
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-iprange=y
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_iptables-mod-socket=y
+CONFIG_PACKAGE_iptables-mod-tproxy=y
+CONFIG_PACKAGE_iptables-nft=y
+CONFIG_PACKAGE_xtables-nft=y
 
 # ======================
 # Netfilter/NAT配置
