--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -139,6 +139,8 @@ CONFIG_NF_FLOW_TABLE=y
 CONFIG_NF_FLOW_TABLE_INET=y
 CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
+CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
 
 # ======================
 # BPF/eBPF系统配置
@@ -234,7 +236,7 @@ CONFIG_PACKAGE_ucode-mod-bpf=y
 # LuCI应用模块
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
-# CONFIG_PACKAGE_luci-app-oaf=y
+CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
