--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -9,7 +9,6 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_EXT4FS=y
-CONFIG_TARGET_EXT4_JOURNAL=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_GRUB_TIMEOUT=2
 
@@ -50,6 +49,41 @@ CONFIG_X86_INTEL_LPSS=y
 CONFIG_ACPI_CPPC_CPUFREQ=y
 
 # ======================
+# 内存管理优化 (无压缩 - 8GB专用)
+# ======================
+CONFIG_SLUB=y
+CONFIG_SLUB_CPU_PARTIAL=y
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=32
+CONFIG_SLUB_DEBUG=n
+CONFIG_PAGE_POOL=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
+CONFIG_ZSMALLOC=n
+CONFIG_ZSWAP=n
+CONFIG_ZRAM=n
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM=n
+CONFIG_ZBUD=n
+CONFIG_Z3FOLD=n
+CONFIG_SWAP=n
+CONFIG_FRONTSWAP=n
+CONFIG_CLEANCACHE=n
+CONFIG_CMA=y
+CONFIG_CMA_SIZE_MBYTE=128
+CONFIG_CMA_SIZE_PERCENTAGE=10
+CONFIG_DMA_CMA=y
+CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
+CONFIG_ARCH_HAS_PREFETCH=y
+CONFIG_ARCH_HAS_PREFETCHW=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
+CONFIG_LRU_GEN_WALKS_MMU=y
+CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
+CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE_PUD=y
+CONFIG_COMPACTION=n
+CONFIG_MIGRATION=n
+
+# ======================
 # Intel硬件优化 (J4125+I226)
 # ======================
 CONFIG_INTEL_IDLE=y
@@ -74,34 +108,10 @@ CONFIG_RPS=y
 CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_DMA_CMA=y
-CONFIG_CMA=y
-CONFIG_CMA_SIZE_MBYTE=256
-CONFIG_CMA_SIZE_PERCENTAGE=20
 CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_IRQ_TIME_ACCOUNTING=n
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
-
-# ======================
-# 内存管理优化
-# ======================
-CONFIG_SLUB=y
-CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_CPU_PARTIAL_DEFAULT=32
-CONFIG_SLUB_DEBUG=n
-CONFIG_PAGE_POOL=y
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-CONFIG_ZSMALLOC=n
-CONFIG_ZSWAP=y
-CONFIG_ZSWAP_COMPRESSOR_DEFAULT=lz4
-CONFIG_ZSWAP_ZPOOL_DEFAULT=zsmalloc
-CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
-CONFIG_ARCH_HAS_PREFETCH=y
-CONFIG_ARCH_HAS_PREFETCHW=y
-CONFIG_LRU_GEN=y
-CONFIG_LRU_GEN_ENABLED=y
 
 # ======================
 # 网络协议栈优化
@@ -135,6 +145,9 @@ CONFIG_INET_IPCOMP=y
 CONFIG_TCP_MD5SIG=y
 CONFIG_NET_UDP_TUNNEL=y
 CONFIG_NET_FOU=y
+CONFIG_NET_IP_TUNNEL=y
+CONFIG_NET_IPGRE=y
+CONFIG_NET_IPGRE_BROADCAST=y
 
 # ======================
 # Netfilter/NAT配置
@@ -166,6 +179,8 @@ CONFIG_NF_FLOW_TABLE_IPV6=y
 CONFIG_NETFILTER_XTABLES=y
 CONFIG_NETFILTER_XT_MARK=y
 CONFIG_NETFILTER_XT_CONNMARK=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y
 
 # ======================
 # BPF/eBPF系统配置
@@ -251,7 +266,6 @@ CONFIG_PACKAGE_kmod-dma-buf-heaps-cma=y
 # ======================
 # 用户态工具包
 # ======================
-CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_ethtool-full=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
@@ -266,6 +280,8 @@ CONFIG_PACKAGE_xdp-tools=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_sysstat=y
+CONFIG_PACKAGE_procps-ng=y
+CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ca-bundle=y
