更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -190,6 +190,7 @@ CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
 CONFIG_NF_CONNTRACK_MARK=y
 CONFIG_NF_CONNTRACK_ACCT=y
 CONFIG_NF_CONNTRACK_TSTAMP=y
+CONFIG_NETFILTER_XT_MATCH_LAYER7=y
 
 # ======================
 # BPF/eBPF系统配置
@@ -272,7 +273,7 @@ CONFIG_PACKAGE_kmod-ipt-compat-xtables=y
 CONFIG_PACKAGE_kmod-nfnetlink=y
 CONFIG_PACKAGE_kmod-ipt-string=y
 CONFIG_PACKAGE_kmod-ipt-quota2=y
-
+CONFIG_PACKAGE_kmod-ipt-layer7=y
 
 # ======================
 # 加密与硬件加速
