--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -18,7 +18,7 @@ CONFIG_GRUB_TIMEOUT=2
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_FULL=y
+CONFIG_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
 CONFIG_CC_OPTIMIZE_O3=y
