更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -161,10 +161,9 @@ CONFIG_NET_IP_TUNNEL=y
 CONFIG_NET_IPGRE=y
 CONFIG_NET_IPGRE_BROADCAST=y
 CONFIG_NET_IPVTI=y
-CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 
 # ======================
-# Netfilter/NAT配置
+# Netfilter/NAT配置 (仅保留nftables)
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
@@ -190,40 +189,6 @@ CONFIG_NF_FLOW_TABLE=y
 CONFIG_NF_FLOW_TABLE_INET=y
 CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
-CONFIG_NETFILTER_XTABLES=y
-CONFIG_NETFILTER_XT_MARK=y
-CONFIG_NETFILTER_XT_CONNMARK=y
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y
-CONFIG_NETFILTER_XT_MATCH_STRING=y
-CONFIG_NETFILTER_XT_MATCH_LENGTH=y
-CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
-CONFIG_NETFILTER_XT_MATCH_QUOTA=y
-CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
-CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
-CONFIG_NETFILTER_XT_MATCH_LAYER7=y
-CONFIG_NETFILTER_XT_MATCH_L7FILTER=y
-CONFIG_NETFILTER_XT_MATCH_PHYSDEV=y
-CONFIG_NETFILTER_XT_MATCH_OWNER=y
-CONFIG_NETFILTER_XT_MATCH_SOCKET=y
-CONFIG_NETFILTER_XT_MATCH_TIME=y
-CONFIG_NETFILTER_XT_MATCH_CPU=y
-CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
-CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
-CONFIG_NF_CONNTRACK_MARK=y
-CONFIG_NF_CONNTRACK_ACCT=y
-CONFIG_NF_CONNTRACK_TSTAMP=y
-CONFIG_NF_CONNTRACK_LABELS=y
-CONFIG_NF_CONNTRACK_RTCACHE=y
-CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
-CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=n
-CONFIG_NETFILTER_XT_TARGET_CT=y
-CONFIG_NETFILTER_XT_TARGET_DSCP=y
-CONFIG_NETFILTER_XT_TARGET_HL=y
-CONFIG_NETFILTER_XT_TARGET_LED=y
-CONFIG_NETFILTER_XT_TARGET_NOTRACK=n
-CONFIG_NETFILTER_XT_TARGET_TEE=y
-CONFIG_NETFILTER_XT_TARGET_TPROXY=y
 
 # ======================
 # BPF/eBPF系统配置
@@ -272,7 +237,7 @@ CONFIG_NET_XDP_UMEM_ALIGNMENT=8
 CONFIG_NET_DEVLINK=y
 
 # ======================
-# 内核模块配置
+# 内核模块配置 
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-tcp-bbr2=y
@@ -287,7 +252,6 @@ CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-nf-natredirect=y
 CONFIG_PACKAGE_kmod-nf-flow-table=y
 CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nf-reject6=y
@@ -298,37 +262,6 @@ CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-ipt-raw=y
-CONFIG_PACKAGE_kmod-ipt-offload=y
-CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-CONFIG_PACKAGE_kmod-ipt-ipset=y
-#CONFIG_PACKAGE_kmod-ipt-compat-xtables=y
-CONFIG_PACKAGE_kmod-nfnetlink=y
-CONFIG_PACKAGE_kmod-ipt-string=y
-CONFIG_PACKAGE_kmod-ipt-quota2=y
-CONFIG_PACKAGE_kmod-ipt-layer7=y
-CONFIG_PACKAGE_kmod-ipt-physdev=y
-CONFIG_PACKAGE_kmod-ipt-owner=y
-CONFIG_PACKAGE_kmod-ipt-socket=y
-CONFIG_PACKAGE_kmod-ipt-time=y
-CONFIG_PACKAGE_kmod-ipt-hashlimit=y
-CONFIG_PACKAGE_kmod-ipt-iprange=y
-CONFIG_PACKAGE_kmod-ipt-account=y
-CONFIG_PACKAGE_kmod-ipt-connmark=y
-CONFIG_PACKAGE_kmod-ipt-conntrack=y
-CONFIG_PACKAGE_kmod-ipt-extra=y
-CONFIG_PACKAGE_kmod-ipt-filter=y
-CONFIG_PACKAGE_kmod-ipt-ulog=y
-CONFIG_PACKAGE_kmod-ipt-nat=y
-CONFIG_PACKAGE_kmod-ipt-nat-extra=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
-CONFIG_PACKAGE_kmod-ipt-ipvs=y
-CONFIG_PACKAGE_kmod-ipt-led=y
-CONFIG_PACKAGE_kmod-ipt-tarpit=y
-CONFIG_PACKAGE_kmod-ipt-tee=y
-CONFIG_PACKAGE_kmod-ipt-tproxy=y
-CONFIG_PACKAGE_kmod-ipt-ts3init=y
-CONFIG_PACKAGE_kmod-ipt-u32=y
 
 # ======================
 # 加密与硬件加速
@@ -359,7 +292,6 @@ CONFIG_PACKAGE_ethtool-full=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_iperf3-ssl=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libxdp=y
@@ -376,11 +308,7 @@ CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_ipset-tools=y
-CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
-CONFIG_PACKAGE_libnetfilter-queue=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpcap=y
