更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -49,7 +49,6 @@ CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
-CONFIG_SCHED_BPF=y
 CONFIG_MTRR=y
 CONFIG_X86_INTEL_LPSS=y
 CONFIG_ACPI_CPPC_CPUFREQ=y
@@ -92,7 +91,6 @@ CONFIG_HUGETLB_PAGE=n
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y
-CONFIG_IGC_XDP=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
@@ -122,7 +120,6 @@ CONFIG_HOTPLUG_PCI_PCIE=y
 # 网络协议栈优化
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR2=y
-CONFIG_KERNEL_TCP_CONG_BBR=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_NET_SCH_DEFAULT=n
 CONFIG_DEFAULT_FQ_CODEL=n
@@ -160,11 +157,10 @@ CONFIG_NET_IPVTI=y
 # ======================
 CONFIG_TCP_KEEPALIVE_INTVL=30
 CONFIG_TCP_KEEPALIVE_PROBES=3
-CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_BBR2=y
 
 # ======================
-# Netfilter/NAT配置 (仅保留nftables)
+# iptables防火墙配置
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
@@ -179,89 +175,47 @@ CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV6=y
-CONFIG_NF_TABLES=y
-CONFIG_NF_TABLES_INET=y
-CONFIG_NF_TABLES_NETDEV=y
-CONFIG_NFT_NAT=y
-CONFIG_NFT_MASQ=y
-CONFIG_NFT_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_FLOW_OFFLOAD=y
-CONFIG_NF_FLOW_TABLE=y
-CONFIG_NF_FLOW_TABLE_INET=y
-CONFIG_NF_FLOW_TABLE_IPV4=y
-CONFIG_NF_FLOW_TABLE_IPV6=y
-
-# ======================
-# BPF/eBPF系统配置
-# ======================
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_JIT_DEFAULT_ON=y
-CONFIG_HAVE_EBPF_JIT=y
-CONFIG_BPF_EVENTS=y
-CONFIG_BPF_STREAM_PARSER=y
-CONFIG_BPF_LSM=y
-CONFIG_BPF_PRELOAD=y
-CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
-CONFIG_BPF_KPROBE_OVERRIDE=y
-CONFIG_ARCH_WANT_DEFAULT_BPF_JIT=y
-CONFIG_BPF_PRELOAD_UMD=y
-CONFIG_CGROUP_BPF=y
-CONFIG_NET_CLS_BPF=y
-CONFIG_NET_ACT_BPF=y
-CONFIG_BPFILTER=y
-CONFIG_BPFILTER_UMH=y
-CONFIG_LWTUNNEL_BPF=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_EGRESS=y
-CONFIG_NET_XGRESS=y
-
-# ======================
-# XDP网络加速配置
-# ======================
-CONFIG_XDP_SOCKETS=y
-CONFIG_XDP_SOCKETS_DIAG=y
-CONFIG_XSK_BUFF_ALLOC=y
-CONFIG_XSK_BATCHED_DESC=y
-CONFIG_XSK_GEN_RX_SUPPORT=y
-CONFIG_XSK_GEN_TX_SUPPORT=y
-CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
-CONFIG_NET_XDP=y
-CONFIG_NET_XDP_SOCKETS=y
-CONFIG_NET_XDP_UMEM=y
-CONFIG_NET_XDP_UMEM_DMA=y
-CONFIG_NET_XDP_UMEM_ALIGNMENT=8
-CONFIG_NET_DEVLINK=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NETFILTER_XT_MARK=y
+CONFIG_NETFILTER_XT_TARGET_MASQUERADE=y
+CONFIG_NETFILTER_XT_TARGET_REDIRECT=y
+CONFIG_NETFILTER_XT_TARGET_LOG=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y
+CONFIG_NETFILTER_XT_MATCH_COMMENT=y
+CONFIG_IP_NF_IPTABLES=y
+CONFIG_IP_NF_FILTER=y
+CONFIG_IP_NF_NAT=y
+CONFIG_IP_NF_MANGLE=y
+CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_FILTER=y
+CONFIG_IP6_NF_NAT=y
+CONFIG_IP6_NF_MANGLE=y
 
 # ======================
 # 内核模块配置 
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-tcp-bbr2=y
-CONFIG_PACKAGE_kmod-nft-core=y
-CONFIG_PACKAGE_kmod-nft-netdev=y
-CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_kmod-nft-fullcone=y
-CONFIG_PACKAGE_kmod-nft-socket=y
-CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-nf-flow-table=y
 CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
-CONFIG_PACKAGE_kmod-nft-compat=y
-CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
+CONFIG_PACKAGE_kmod-ipt-core=y
+CONFIG_PACKAGE_kmod-ipt-conntrack=y
+CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
+CONFIG_PACKAGE_kmod-ipt-nat=y
+CONFIG_PACKAGE_kmod-ipt-nat-extra=y
+CONFIG_PACKAGE_kmod-ipt-filter=y
+CONFIG_PACKAGE_kmod-ipt-ipset=y
+CONFIG_PACKAGE_kmod-ipt-nat6=y
 
 # ======================
 # 加密与硬件加速
@@ -280,21 +234,14 @@ CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-crypto-hmac=y
 CONFIG_PACKAGE_kmod-crypto-null=y
-CONFIG_PACKAGE_kmod-crypto-user=y
 
 # ======================
 # 用户态工具包
 # ======================
 CONFIG_PACKAGE_ethtool-full=y
 CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libxdp=y
-CONFIG_PACKAGE_bpf-headers=y
-CONFIG_PACKAGE_ucode-mod-bpf=y
-CONFIG_PACKAGE_xdp-tools=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_sysstat=y
@@ -311,6 +258,14 @@ CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libpcre2=y
+CONFIG_PACKAGE_iptables=y
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-filter=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_iptables-mod-ulog=y
+CONFIG_PACKAGE_ipset=y
+CONFIG_PACKAGE_ipset-lists=y
 
 # ======================
 # LuCI应用模块 (保留文件管理)
@@ -366,9 +321,6 @@ CONFIG_RANDOMIZE_BASE=n
 # 内核子系统配置
 # ======================
 CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_CGROUP_BPF=y
-CONFIG_KERNEL_BPF_EVENTS=y
-CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_KERNEL_NAMESPACES=y
 CONFIG_KERNEL_UTS_NS=y
 CONFIG_KERNEL_IPC_NS=y
