更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -225,11 +225,11 @@ CONFIG_NET_IPVTI=y
 # ======================
 CONFIG_NET_SCH_MQPRIO=y
 CONFIG_NET_SCH_FQ=y
-CONFIG_NET_SCH_FQ_CODEL=y
+CONFIG_NET_SCH_FQ_CODEL=n
 CONFIG_NET_SCH_CAKE=y
-CONFIG_NET_SCH_ETF=y
-CONFIG_NET_SCH_TAPRIO=y
-CONFIG_NET_SCH_ETS=y
+CONFIG_NET_SCH_ETF=n
+CONFIG_NET_SCH_TAPRIO=n
+CONFIG_NET_SCH_ETS=n
 CONFIG_NET_SCH_MQPRIO_LIB=y
 CONFIG_NET_EMATCH=y
 CONFIG_NET_CLS=y
