--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -369,7 +369,7 @@ CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_perf=y
+CONFIG_PACKAGE_perf=n
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnftnl=y
